--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ input{
   }
   footer {
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
